--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Widmark Cardoso"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.11,<3.13"
 numpy = "^2.1.1"
 matplotlib = "^3.9.2"
 ipykernel = "^6.29.5"
