--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pathlib2 = "^2.3.7.post1"
 scipy = "^1.14.1"
 pandas = "^2.2.2"
 nbformat = ">=4.2.0"
+pylint = "^3.3.1"
+jax = "^0.4.35"
 
 
 [build-system]
