--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 description = ""
 authors = ["Widmark Cardoso"]
 readme = "README.md"
+packages = [{include = "**\\*.py", from = "."}]
+
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
@@ -16,6 +18,7 @@ pandas = "^2.2.2"
 nbformat = ">=4.2.0"
 pylint = "^3.3.1"
 jax = "^0.4.35"
+openpyxl = "^3.1.5"
 
 
 [build-system]
